Ensure thanks image doesn't break page on mobile (#2457)

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -39,3 +39,7 @@
 .center {
   text-align: center;
 }
+
+.thanks{
+  max-width: 100%;
+}
